RESOLVED FIXED307548
[LOL] op_new_object should not always flush
https://bugs.webkit.org/show_bug.cgi?id=307548
Summary [LOL] op_new_object should not always flush
Keith Miller
Reported 2026-02-11 08:15:03 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-11 08:15:12 PST
Keith Miller
Comment 2 2026-02-11 13:56:11 PST
EWS
Comment 3 2026-02-12 02:07:23 PST
Committed 307349@main (4821f5b9446c): <https://commits.webkit.org/307349@main> Reviewed commits have been landed. Closing PR #58438 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.