[LOL] op_new_object should not always flush https://bugs.webkit.org/show_bug.cgi?id=307548 rdar://170148582

Reviewed by Yusuke Suzuki.

Right now we always flush for op_new_object, however since we allocate
objects its more profitable to do a normal allocation and silentSpill
on the slow path.

Also, uncovered an issue where allocating more than one scratch will
end up flushing the same stack slot twice triggering an ASSERT. Now we
lock the scratches so they can't be spilled.

No new tests, no behavior change. Covered by existing tests.

Canonical link: https://commits.webkit.org/307349@main